# notebooks

./: .gitattributes  .gitignore  Dockerfile_DGX_Spark  Dockerfile_Strix_Halo  Llama_3_2_(1B)_RAFT.ipynb  Qwen3_MoE_A_H100ipynb.ipynb  README.md  TinyQwen3_MoE_T4.ipynb  gpt-oss-(20B)_StrixHalo-Fine-tuning.ipynb  loftq_update_log.txt  pyproject.toml  replace_text.py  update_all_notebooks.py
.github/: CODEOWNERS  dependabot.yml
kaggle/: Gemma4_(31B)-Text.ipynb  Gemma4_(E4B)-Text.ipynb
kaggle_T4x2/: Advanced_Llama3_1_(3B)_GRPO_LoRA_kaggle_T4x2.ipynb  Advanced_Llama3_2_(3B)_GRPO_LoRA_kaggle_T4x2.ipynb  All_MiniLM_L6_v2_kaggle_T4x2.ipynb  BGE_M3_kaggle_T4x2.ipynb  CodeForces-cot-Finetune_for_Reasoning_on_CodeForces_kaggle_T4x2.ipynb  CodeGemma_(7B)-Conversational_kaggle_T4x2.ipynb  DeepSeek_R1_0528_Qwen3_(8B)_GRPO_kaggle_T4x2.ipynb  Deepseek_OCR_(3B)-Eval_kaggle_T4x2.ipynb  Deepseek_OCR_(3B)-Evaluation_kaggle_T4x2.ipynb  Deepseek_OCR_(3B)_kaggle_T4x2.ipynb  Deepseek_OCR_2_(3B)_kaggle_T4x2.ipynb  ERNIE_4_5_21B_A3B_PT-Conversational_kaggle_T4x2.ipynb  ERNIE_4_5_VL_28B_A3B_PT_Vision_kaggle_T4x2.ipynb  EmbeddingGemma_(300M)_kaggle_T4x2.ipynb  Falcon_H1-Alpaca_kaggle_T4x2.ipynb  Falcon_H1_(0.5B)-Alpaca_kaggle_T4x2.ipynb  FunctionGemma_(270M)-LMStudio_kaggle_T4x2.ipynb  FunctionGemma_(270M)-Mobile-Actions_kaggle_T4x2.ipynb  FunctionGemma_(270M)-Multi-Turn-Tool-Calling_kaggle_T4x2.ipynb  FunctionGemma_(270M)_kaggle_T4x2.ipynb  GLM_Flash_A100(80GB)_kaggle_T4x2.ipynb  GPT_OSS_BNB_(20B)-Inference_kaggle_T4x2.ipynb  GPT_OSS_MXFP4_(20B)-Inference_kaggle_T4x2.ipynb  Gemma2_(2B)-Alpaca_kaggle_T4x2.ipynb  Gemma2_(9B)-Alpaca_kaggle_T4x2.ipynb  Gemma3N_(2B)-Inference_kaggle_T4x2.ipynb  Gemma3N_(4B)-Audio_kaggle_T4x2.ipynb  Gemma3N_(4B)-Conversational_kaggle_T4x2.ipynb  (+208 more)
(+1110 files in other folders)
